--- a/index.html
+++ b/index.html
@@ -2,15 +2,6 @@
 <html lang="th">
 <head>
 
- <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';
-j.setAttributeNode(d.createAttribute('data-ot-ignore'));
-j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-5B524NMC');</script>
-<!-- End Google Tag Manager -->
   
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -53,10 +44,7 @@ j.async=true;j.src=
 </head>
 <body>
 
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5B524NMC"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
   
   <header>
     <h1>ตัวอย่างเว็บไซต์ + Cookie Consent (5 ประเภท)</h1>
@@ -244,7 +232,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 })();
 </script>
 
-  <!-- test_cookie
+  
 <script>
   // เขียนคุกกี้ทดสอบทุกหมวดให้ OneTrust เห็นทันที
   document.cookie = "test_cookie_necessary=1; path=/; SameSite=Lax;";
@@ -252,7 +240,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   document.cookie = "test_cookie_functional=1; path=/; SameSite=Lax;";
   document.cookie = "test_cookie_targeting=1; path=/; SameSite=Lax;";
   document.cookie = "test_cookie_social=1; path=/; SameSite=Lax;";
-</script> -->
+</script> 
   
 </body>
 </html>
