--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My Site with Cookie Consent</title>
+  <title> Test My Site with Cookie Consent</title>
   <style>
     :root{--bg:#0b1020;--card:#121938;--text:#e8ecff;--muted:#a7b0d8;--brand:#6aa0ff;--ok:#30c48d;--warn:#ffb84d;--red:#ff6b6b}
     *{box-sizing:border-box}
