--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
   
 <script>
   // เขียนคุกกี้ทดสอบทุกหมวดให้ OneTrust เห็นทันที
-  document.cookie = "test_cookie_necessary=1; path=/; SameSite=Lax;";
-  document.cookie = "test_cookie_performance=1; path=/; SameSite=Lax;";
-  document.cookie = "test_cookie_functional=1; path=/; SameSite=Lax;";
-  document.cookie = "test_cookie_targeting=1; path=/; SameSite=Lax;";
-  document.cookie = "test_cookie_social=1; path=/; SameSite=Lax;";
+  document.cookie = "cookie_necessary=1; path=/; SameSite=Lax;";
+  document.cookie = "cookie_performance=1; path=/; SameSite=Lax;";
+  document.cookie = "cookie_functional=1; path=/; SameSite=Lax;";
+  document.cookie = "cookie_targeting=1; path=/; SameSite=Lax;";
+  document.cookie = "cookie_social=1; path=/; SameSite=Lax;";
 </script> 
   
 </body>
