--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
   }
 
   // Strictly Necessary → เขียนเสมอ
-  setTestCookie("test_cookie_necessary",365);
+  setTestCookie("cookie_necessary",365);
 
   // Hook การบันทึก consent
   const oldSave = window.getCookieConsent;
